test/parser/chp/003.stderr
At: "003.hac":5:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: defproc [3:1..7]
#STATE#	identifier: empty [3:9..13]
#STATE#	list<(port-formal-decl)>: (port-formal-decl) ... [3:14..43]
#STATE#	{ [3:45]
#STATE#	keyword: chp [4:1..3]
#STATE#	{ [4:5]
#STATE#	} [5:1]
in state #STATE#, possible rules are:
	language_body : CHP_LANG '{' . chp_body '}'  (#RULE#)
acceptable tokens are: 
	'$' (shift)
	'[' (shift)
	'{' (shift)
	ID (shift)
	SCOPE (shift)
	BEGINLOOP (shift)
	LOG (shift)
