test/parser/chp/003.hac
// "003.hac"
// accepts empty CHP body

defproc empty(chan?(bool) L; chan!(bool) R) {
chp {
}
}

